finalizado metodos de pagamento e redirecionamento de pagina/endpoint via websocket

--- a/templates/confirmed_payment.html
+++ b/templates/confirmed_payment.html
@@ -19,7 +19,7 @@
     <main>
       <header>
         <div id="qr-code">
-          <img src=".{{host}}/payments/pix/qr_code/{{qrcode}}" alt="QR Code" />
+          <img src="{{host}}/payments/pix/qr_code/{{qrcode}}" alt="QR Code" />
 
 
           <img
